2010-02-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/gaussformat.cpp: Fix crash with reading Gaussian
	files with only one geometry.

	* src/formats/CMakeLists.txt: Fix to allow compile of InChI with
	ops/unique.cpp correctly.

2010-02-28  Noel O'Boyle

	* test/testunique.py: Implement Chris' tests for --unique
	* test/files/dupset.smi: Remove file as these test cases are included
	in the Python script

2010-02-28  Chris Morley

	* src/ops/unique.cpp: Make header file for unordered_map
	conditional: <unordered_map> for MSVC; <tr1/unordered map>
	otherwise. 
	Simplify mesaage reporting duplicates.
	
	* test/files/dupset.smi; datafile for a test (but no test yet).
	 
2010-02-27  Noel O'Boyle

	* test/CMakelists.txt, test/testfastsearch.py, test/testbabel.py:
	Added a new test for fastsearch functionality plus some convenience
	methods.

2010-02-27  Chris Morley
	
	* include/openbabel/base.h: Make GetTitle() and SetTitle() virtual
	  but do nothing in base class. Avoids the need for dynamic_casts
	  when OBBase* pointers are used in ops, etc.

	* src/formats/inchiformat.cpp, include/openbabel/inchiformat.h:
	  remove (unused) testformat and move declarations to a header
	  file which can be used by...
	  
	* src/descriptors/filters.cpp,src/descriptors/inchidescriptor.cpp:
	  move inchi descriptor
	  
	* src/descriptors/cansmidescriptor.cpp: add new descriptor
	
	* include/openbabel/obmolecformat.h,src/obmolecformat.cpp: remove old
	  implementation of --sort to a more natural home in an op...
	
	* src/ops/sort.cpp: with added features (see wiki page)

	* include/openbabel/descriptor.h, src/descriptor.cpp: change the
	  comparison functions

	* src/ops/unique.cpp: new op for removing duplicate molecules
	
	* src/CMakeLists.txt, src/formats/CMakeLists.txt: for new files.
	  unique.cpp is in format_common rather than plugin_ops because linking
	  is easier.
	  
	* src/formats/fastsearchformat.cpp: line in message
	